syntax = "proto3";

package order;

// Order Service - Manages orders and order items
service OrderService {
  rpc PlaceOrder (PlaceOrderRequest) returns (Order); // High-level orchestration method
  rpc CreateOrder (CreateOrderRequest) returns (Order); // Low-level order creation
  rpc FindOrderById (FindOrderByIdRequest) returns (Order);
  rpc FindOrdersByUserId (FindOrdersByUserIdRequest) returns (OrderList);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (Order);
  rpc CancelOrder (CancelOrderRequest) returns (Order);
}

// Enums
enum OrderStatus {
  CREATED = 0;
  PAID = 1;
  FAILED = 2;
}

// Messages
message OrderItem {
  string id = 1;
  string product_id = 2;
  int32 quantity = 3;
  double price = 4;
}

message Order {
  string id = 1;
  string user_id = 2;
  OrderStatus status = 3;
  double total_amount = 4;
  repeated OrderItem items = 5;
  string created_at = 6;
}

message OrderList {
  repeated Order orders = 1;
  int32 total = 2;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItemRequest items = 2;
}

message OrderItemRequest {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3; // Price at time of order (fetched by Gateway from Product Service)
}

message FindOrderByIdRequest {
  string id = 1;
}

message FindOrdersByUserIdRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message UpdateOrderStatusRequest {
  string id = 1;
  OrderStatus status = 2;
}

message CancelOrderRequest {
  string id = 1;
}

// PlaceOrder - High-level orchestration request (no prices, Order Service fetches them)
message PlaceOrderRequest {
  string user_email = 1;
  repeated PlaceOrderItemRequest items = 2;
}

message PlaceOrderItemRequest {
  string product_id = 1;
  int32 quantity = 2;
}
